crates/but-api-macros/tests/tests/ui/fail/base_invalid_attr_key.stderr
error: Expected `try_from = Type`; only `try_from` is supported as a key
 --> tests/ui/fail/base_invalid_attr_key.rs:8:11
  |
8 | #[but_api(from = json::HexHash)]
  |           ^^^^
